# vvv17-demo-team-green

./: CMakeList.txt  CMakeLists.txt  Module_diagram.html  README.md
app/scripts/: GreenCub.xml  vvv17-demo-team-green-app.xml
src/: CMakeLists.txt  recognition.cpp
src/Bin_Detector/: CMakeLists.txt
src/Bin_Detector/include/: BinDetector.h
src/Bin_Detector/src/: BinDetector.cpp  main.cpp
src/Detector_Module/: CMakeLists.txt
src/Gaze_Control/: CMakeLists.txt  gaze_controller.cpp
src/Kinematic_Module/: CMakeLists.txt  Kinematic_Module.thrift  main.cpp
src/Object_Recognition/: CMakeLists.txt  README.md  garbage_lmdb.py  main.cpp  recognition.cpp  test.cpp
src/Perception_Module/: CMakeLists.txt  OpenCVInc.h  closest-blob.thrift  iFaceDetector.cpp  iFaceDetector.h  main.cpp  stdafx.h
src/State_Machine/: CMakeLists.txt
src/State_Machine/include/: SMModule.h
src/State_Machine/src/: Main.cpp  SMModule.cpp
